<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_child_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="25dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:paddingBottom="10dp"
    android:background="@drawable/myshape"
    android:layout_marginTop="5dp">

    <ImageView
        android:id="@+id/icon_footer"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/app_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/icon_footer"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:textStyle="bold"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:layout_marginLeft="60dp"
        android:text="@string/tentang"
        android:layout_below="@+id/app_footer"/>

    <TextView
        android:id="@+id/kontak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:text="@string/kontak"
        android:layout_marginLeft="90dp"
        android:layout_toRightOf="@+id/about"
        android:layout_below="@+id/app_footer"/>
</RelativeLayout>