<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tes"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="#FFF">

        <ImageView
            android:id="@+id/home"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/home"
            android:scaleType="fitXY"
            android:onClick="beranda"/>

        <TextView
            android:id="@+id/homes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@+id/home"
            android:layout_marginLeft="20dp"
            android:textSize="12dp"
            android:onClick="beranda"/>

        <ImageView
            android:id="@+id/asset"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="130dp"
            android:src="@drawable/asset"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aset"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@+id/asset"
            android:layout_marginLeft="128dp"
            android:textSize="12dp"/>

        <ImageView
            android:id="@+id/wishlist"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/wishlist"/>

        <TextView
            android:id="@+id/wishlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@+id/wishlist"
            android:layout_marginLeft="212dp"
            android:textSize="12dp"/>

        <ImageView
            android:id="@+id/account"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="330dp"
            android:scaleType="fitXY"
            android:src="@drawable/account"/>

        <TextView
            android:id="@+id/akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akun"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@+id/account"
            android:layout_marginLeft="329dp"
            android:textSize="12dp"/>


    </RelativeLayout>


</FrameLayout>